--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "env $(cat .env | grep -v \"#\" | xargs) nodemon server.js"
   },
   "repository": {
     "type": "git",
