--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env $(cat .env | grep -v \"#\" | xargs) nodemon server.js",
-    "cypress:open": "cypress open"
+    "dev": "env $(cat .env.dev | grep -v \"#\" | xargs) nodemon server.js",
+    "cypress:open": "cypress open",
+    "start:test": "env $(cat .env.test | grep -v \"#\" | xargs) nodemon server.js"
   },
   "repository": {
     "type": "git",
