--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "A shitty board",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env $(cat .env.dev | grep -v \"#\" | xargs) nodemon server.js",
-    "cypress:open": "cypress open",
-    "start:test": "env $(cat .env.test | grep -v \"#\" | xargs) nodemon server.js"
+    "dev": "env $(cat .env | grep -v \"#\" | xargs) nodemon server.js",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
